# interview-api

./: .gitignore  README.md  dump.rdb  main.py  pyproject.toml
app/: celery_app.py  detection.py  tasks.py  utils.py
core/: config.py  detect.py  fallback.py  gaze_analyzer.py  gaze_calibrator.py  utils.py
